--- a/src/components/css/footer.css
+++ b/src/components/css/footer.css
@@ -1,11 +1,15 @@
 footer {
     background-color: #75ACA1;
-    position: absolute;
     bottom: 0;
     width: 100%;
+    height: 5rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 footer p {
     color: #FFFFFF;
     text-align: center;
+    margin: 0;
 }
